# outlier-exposure-with-vim

./: .gitignore  .gitmodules  README.md  exploring_confidence_calibration.ipynb  exploring_energy_ood.ipynb  exploring_scores.ipynb  main.py  pyproject.toml
anomaly_scores/: energy.py  max_logit.py  softmax.py  vim_scores.py
exploration/: comparing_fine_tuning.ipynb  confidence_calibration.ipynb  energy_ood.ipynb  scores.ipynb  scores_for_same_model.ipynb  training_with_vim.ipynb
util/: __init__.py  confidence.py  display_results.py  get_odd_score.py  get_ood_score.py
util/tests/: test_confidence.py
vim_training/: model.py  regimes.py  restore_model.py  test.py  testing.py  train.py
vim_training/test/: test_ortogonal_space.py
