[tool.poetry]
name = "activation-ood"
version = "0.1.0"
description = "Out-of-distribution detection trough network activations"
authors = ["EricKolibacz <26793186+EricKolibacz@users.noreply.github.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "activation_ood"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
